# PROXIMUS

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMOTION.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  docker-compose.prod.yml
docs/: api-reference.md  architecture.md  call-flow.md  demo-transcript.md  development.md  progress.md  roadmap.md  setup.md
src/proximus/: __init__.py  __main__.py  cli.py  config.py
src/proximus/agent/: __init__.py  outbound.py  summarize.py  voice.py
src/proximus/ai/: __init__.py  anthropic.py  base.py  openai.py
src/proximus/api/: __init__.py  main.py
src/proximus/context/: __init__.py  calls.py  governed.py  resume.py
src/proximus/sip/: __init__.py  config.py
tests/: __init__.py  test_api_auth.py  test_api_endpoints.py  test_api_uploads.py  test_calls.py  test_config.py  test_governed.py  test_phase3a.py  test_resume.py  test_telnyx_sip.py  test_twilio_sip.py
web/: .env.example  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/calls/: OutboundCallModal.tsx
web/src/components/dashboard/: StatusCard.test.tsx  StatusCard.tsx
web/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
web/src/components/phone-links/: PhoneLinkCreate.tsx  PhoneLinkList.tsx
web/src/components/resumes/: ResumeDetailModal.tsx  ResumeList.tsx  ResumeUpload.tsx
web/src/hooks/: useCalls.ts  useHealth.ts  usePhoneLinks.ts  useResumes.ts
web/src/pages/: CallHistory.tsx  Configuration.tsx  Dashboard.tsx  Guide.tsx  PhoneLinks.tsx  Resumes.tsx
web/src/services/: api.test.ts  api.ts
web/src/types/: index.ts
