[project]
name = "proximus"
version = "0.1.0"
description = "AI voice agent that handles incoming recruiter screening calls using candidate resume context"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LiveKit voice agent
    "livekit-agents>=0.12",
    "livekit-plugins-silero>=0.7",      # Voice Activity Detection
    "livekit-plugins-deepgram>=0.7",    # Speech-to-Text
    "livekit-plugins-cartesia>=0.4",    # Text-to-Speech
    "livekit-plugins-anthropic>=0.7",   # Anthropic LLM
    "livekit-plugins-openai>=0.7",      # OpenAI LLM

    # AI providers (provider-agnostic layer)
    "anthropic>=0.40",
    "openai>=1.50",

    # API layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Configuration & utilities
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",

    # Resume parsing
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proximus"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Line length is enforced by the formatter; remaining cases are unsplittable strings.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before the livekit plugins are imported.
"src/proximus/agent/voice.py" = ["E402"]
# FastAPI uses callables (File/Depends) as argument defaults by design.
"src/proximus/api/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
# Third-party telephony/voice libs (livekit, etc.) ship without type stubs.
ignore_missing_imports = true
# Strict typing is a goal, not yet met across the legacy modules — tightening
# this is tracked as a good-first-issue. CI runs mypy in non-blocking mode.
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
